# RoboFEI-HT_2023_SOFTWARE

./: .gitignore  README.md  backup_motors_communication  backup_motors_cpp  backup_motorsattrributeshpp  robot-usb-ports.rules  setup.sh  terminal.txt
src/control/: CMakeLists.txt  package.xml
src/control/Data/: config.ini  config1.ini  config2.ini  config3.ini  config4.ini  config5.ini  config_altair.ini  config_draco.ini  config_prometheus.ini  config_reforced_prometheus.ini  conig4.ini  motion.json  motion1.json  motion2.json  motion3.json  motion4.json  motion5.json  rascunho.txt
src/control/include/: AssyncTimer.hpp  Kinematics.h  MX28.h  MotionManager.h  minIni.h
src/control/include/neck_control/: neck_control.hpp
src/control/include/robot_joy_control/: buttons.hpp  robot_joy_control.hpp
src/control/src/: control.cpp  control_backup.cpp  neck_control.cpp  robot_joy_control.cpp  teste.cpp
src/control/src/motion/: AngleEstimator.cpp  JointData.cpp  MotionManager.cpp  mm_get_position.cpp
src/control/src/motion/modules/: Action.cpp  Walking.cpp
src/decision_pkg_cpp/: CMakeLists.txt  package.xml
src/decision_pkg_cpp/include/decision_pkg_cpp/: AssyncTimer.hpp  attributes.h  decision_node.hpp  robot_behavior.hpp  utils.h
src/decision_pkg_cpp/src/: decision.txt  decision_node.cpp  robot_behavior.cpp
src/decision_pkg_cpp/src/robot_behavior/: robot_behavior.cpp
src/gui/: CMakeLists.txt  package.xml
src/gui/src/: .json.cpp.swp  json.cpp  json.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window.ui
src/motors_pkg/: CMakeLists.txt  package.xml
src/motors_pkg/include/motors_pkg/: motorsAttributes.hpp  motors_communication.hpp
src/motors_pkg/src/: motors_communication.cpp
src/vision_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vision_pkg/vision_pkg/: detect.py  open_cam.py
src/vision_pkg/vision_pkg/submodules/: ClassConfig.py  Client.py  ImageGetter.py  Server.py  config.ini  image.py  utils.py
src/vision_pkg/vision_pkg/weights/: convert.py
src/vision_pkg/vision_pkg/weights/best_do_zero/archive/: data.pkl
src/vision_pkg/vision_pkg/weights/best_do_zero/archive/data/: 1  10  100  103  106  108  110  115  117  118  12  122  124  128  129  13  130  132  133  135  136  138  139  141  142  144  145  146  150  151  154  156  157  158  159  16  160  162  164  165  (+273 more)
src/vision_pkg/vision_pkg/weights/best_openvino_model/: best.xml  metadata.yaml
src/vision_pkg/vision_pkg/weights/best_openvino_model2/: best.xml
src/vision_pkg/vision_pkg/weights/best_retreinada/archive/: data.pkl
src/vision_pkg/vision_pkg/weights/best_retreinada/archive/data/: 0  10  102  103  104  105  109  110  111  114  115  116  118  120  121  122  123  124  127  128  129  13  134  135  136  139  14  140  141  142  144  146  15  150  151  152  153  154  156  158  (+278 more)
src/vision_pkg/vision_pkg/weights/best_retreinada2/full_dataset/: data.yaml
src/vision_pkg/weights/: convert.py
src/vision_pkg/weights/best_do_zero/archive/.data/: serialization_id
src/vision_pkg/weights/best_do_zero/archive/data/: 0  102  104  105  109  111  112  114  116  120  121  123  126  127  134  14  140  147  148  15  152  153  163  166  168  169  176  178  184  186  193  195  196  200  205  21  213  214  216  217  (+121 more)
src/vision_pkg/weights/best_openvino_model2/: metadata.yaml
src/vision_pkg/weights/best_retreinada/archive/data/: 1  100  106  108  112  117  12  126  130  132  133  138  145  147  148  157  163  165  168  170  178  18  182  184  189  19  192  195  20  205  207  211  212  214  216  217  22  222  223  235  (+116 more)
src/vision_pkg/weights/best_retreinada2/full_dataset/train/labels/: 1028-img00212_png.rf.43c16301c13714fb279de070e65fc22d.txt  1028-img00257_png.rf.66444208f7e9d419dae4fae76a3fe197.txt  1028-img00474_png.rf.f8c59e0ab939cf788208fa93b1ffd6ba.txt  1028-img00611_png.rf.929227b01530e07bbabe8ee4e8e012cf.txt  1028-img00775_png.rf.5efe4dc3bfa433c8b33801f97e4dff07.txt  1028-img00775_png.rf.77090f5ef5057187d222fdab34ba1014.txt  1028-img00985_png.rf.c49688384c24f8236dac7ae2c84e8fec.txt  1028-img01076_png.rf.85b610f1452f741686e0504f07e99edd.txt  1028-img01274_png.rf.6f3ce83dd7ce5957f4adcb0cf1d49892.txt  1028-img01630_png.rf.be573d1bb95070f16bd9ce2ede112320.txt  1028-img01677_png.rf.f52b9e5c81becb7ab305ae89a47c5edb.txt  1028-img01761_png.rf.36e2391d4438b23525a016fce9b73236.txt  1029-img00388_png.rf.9f612219358a8c47ae9cf38d8d87386a.txt  1029-img00646_png.rf.d90dc30feeaf7169984f756c8d93a390.txt  1029-img00855_png.rf.a1b0803b6d3c6596f3973cc2a566f095.txt  1029-img00869_png.rf.5e7c6e40b86867a21a9240d168c81e56.txt  1029-img00967_png.rf.e88923428581399418c40beaf5e0c415.txt  1029-img01433_png.rf.1cf573b4e715d3e82006f09580946347.txt  1029-img01573_png.rf.3546f6fab0b1f9be7f75a295e4e42d6f.txt  1029-img01630_png.rf.0d200cd9f51164bb13abb924db13bad1.txt  1029-img01900_png.rf.e963840bad5a7392fc18025db5951a15.txt  1029-img02099_png.rf.1ff741189f27c605666026063f21df9f.txt  1030-img00299_png.rf.5320fc21d266c6e8d387cc3dcc3ce0c8.txt  1030-img00340_png.rf.4b177206060a5b8693cb4d0349b3966e.txt  1031-img00329_png.rf.deadd9bf5eb5d28289e2b768cb3db202.txt  1031-img00482_png.rf.3c4f0bb2cd0000138f78cb93ee7137ba.txt  1031-img00482_png.rf.cb3d09b1509ac21f98094b9f558f69b1.txt  1031-img00516_png.rf.138fb4c4a2a08e72da0ab69a37dd2412.txt  1031-img00519_png.rf.026fca3b5f1834fdb2a8cf7bf18c8ee1.txt  1031-img00603_png.rf.efdd84d341eaa42bba250e3faca703bb.txt  1031-img00663_png.rf.bb4a88e37462f6ee3cd8b9e6df8576b8.txt  1031-img00707_png.rf.faff9e488f8f3f976fbafc43fd6243a3.txt  1031-img00756_png.rf.8ae6ee20d12645b2144adc9b124b9763.txt  1031-img00808_png.rf.f5c019d15d62fcebe510f77cb17749dd.txt  1031-img01448_png.rf.f191ae7d5fe34383efe182c31d2f30f1.txt  1031-img01548_png.rf.f027ffc1ed048f459bef1c68f11f7ea0.txt  1031-img01638_png.rf.5fb0d78c3794fbd636d43387a3378bea.txt  (+2920 more)
src/vision_pkg/weights/best_retreinada2/full_dataset/valid/: labels.cache
src/vision_pkg_cpp/: CMakeLists.txt  package.xml
src/vision_pkg_cpp/include/: goal_aim_node.hpp
src/vision_pkg_cpp/src/goal_aim/: goal_aim_node.cpp
(+7137 files in other folders)
